<resources>
    <string name="app_name" translatable="false">MyVocab</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-4460190431045399~9214225719</string>
    <string name="admob_learning_interstitial_ad_id" translatable="false">ca-app-pub-4460190431045399/1894973040</string>

    <!-- test ad id -->
<!--    <string name="admob_learning_interstitial_ad_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->

    <!-- Fast Translation -->
    <string name="english">ENGLISH</string>
    <string name="russian">RUSSIAN</string>
    <string name="fast_translation">Fast Translation</string>
    <string name="fast_translation_notification_content">Select and copy a word to translate</string>
    <string name="could_not_translate">Could not translate</string>

    <!-- Learning -->
    <string name="label_learning">Learning</string>
    <string name="do_you_know">Do you know this word?</string>
    <string name="was_you_right">Was you right?</string>
    <string name="i_know">I know</string>
    <string name="i_dont_know">I don\'t know</string>
    <string name="i_was_right">I was right</string>
    <string name="i_was_wrong">I was wrong</string>
    <string name="memorise_the_translation">Memorise the translation</string>
    <string name="next_word">Next word</string>
    <string name="no_words_to_learn">No words to learn</string>

    <!-- Vocab -->
    <string name="label_my_vocab">Vocab</string>
    <string name="label_my_words">My words</string>
    <string name="label_my_word_lists">My word lists</string>
    <string name="in_learning">In Learning</string>
    <string name="learned">Learned</string>
    <string name="message_empty_vocab">Your vocab is empty.\nAdd new word manually or using Fast Translation.</string>
    <string name="message_no_word_lists">No added word lists.\nAdd new word list from Search.</string>
    <string name="message_no_learned_word_lists">You\'ve not learned any word lists yet.\nLearn them in Learning section.</string>

    <!-- Add new word -->
    <string name="label_add_new_word">Add new word</string>
    <string name="new_word">New word</string>
    <string name="translation">Translation</string>
    <string name="enter_new_word">Enter new word</string>
    <string name="enter_translation">Enter translation</string>
    <string name="add">Add</string>
    <string name="add_test_word_set">Add test word set</string>
    <string name="import_csv">Import CSV</string>

    <!-- Word set details -->
    <plurals name="word_count">
        <item quantity="zero">No words</item>
        <item quantity="one">%d word</item>
        <item quantity="other">%d words</item>
    </plurals>
    <string name="learning_percentage">%d%% learned</string>

    <!-- Search -->
    <string name="label_search">Search</string>

    <!-- Settings -->
    <string name="label_settings">Settings</string>
    <string name="enable_fast_translation">Enable Fast Translation</string>
    <string name="dialog_permission_draw_overlay">Allow MyVocab draw translation bubble</string>
    <string name="disable_optimization">"For stable working of Fast Translate, please allow MyVocab work in background:\n\nOn the settings screen choose \"All applications\", find MyVocab and choose \"Don't optimize\""</string>
    <string name="allow_work_in_background">Allow MyVocab work in background</string>
    <string name="allow">Allow</string>

    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_action_cancel">Cancel</string>

    <string name="remove_all_words">Remove all words</string>
    <string name="remind_to_learn_words">Remind to learn words</string>
    <string name="reminding_time">Reminding time</string>
    <string name="remind_only_if_there_are_words_to_learn">Remind only if there are words to learn</string>
    <string name="words">Words</string>
    <string name="word_lists">Word lists</string>

    <string name="dialog_select_all_words_to_learn">Select all the words to learn?</string>
    <string name="dialog_deselect_all_words_to_learn">Deselect all the words to learn?</string>
    <string name="select_words_you_want_to_learn_or_add_new_words">Select words you want to learn or add new words</string>
    <string name="find_words">Find words</string>

    <string name="dialog_sure_want_learn_this_word_list">Are you sure you want to learn this word list?</string>
    <string name="dialog_sure_want_remove_this_word_list">Are you sure you want to remove this word list from your vocab?</string>

    <string name="learn_all_words">Learn all words</string>

    <string name="mark_as_learned">Mark as learned</string>
    <string name="reset_the_progress">Reset the progress</string>
    <string name="add_to_my_vocab">Add to my vocab</string>
    <string name="delete_word">Delete</string>
    <string name="splash_learn_only_what_you_need">Learn only the words,\n that you need</string>
    <string name="intro_word_lists_label">Add and learn word lists that interest you. They are updated regularly.</string>
    <string name="intro_fast_translation_text" translatable="false">Speculative fiction can include fantasy and science fiction, though as with many literary
        genres, nobody agrees on exactly what belongs to which category. The way I see it, speculative fiction is any story that guides a reader into thinking
        more deeply about something that doesn’t presently appear in their world. Typically this takes place through the lens of events that don’t happen
        in the world today (either because they can’t, or simply because they haven’t come to pass yet) but could in the future. The stories in speculative </string>
    <string name="select_and_copy_unfamiliar_word">Select and copy unfamiliar word</string>
    <string name="intro_fast_translate_label">Translate unfamiliar words without distracting from reading, just select and copy them</string>
    <string name="settings_fast_translate_guide_description">You will be able to translate without distracting from reading, just select and copy unfamiliar word</string>
    <string name="progress_will_be_reset">Progress will be reset</string>
    <string name="progress_will_be_increased">Progress will be increased</string>
    <string name="failed_to_load_word_lists">Failed to load word lists.\nPlease check your internet connection.</string>
    <string name="transcription">Transcription (optional)</string>
    <string name="meanings">Word synonyms by \",\" (optional)</string>
    <string name="synonyms">Translation synonyms by \",\" (optional)</string>
    <string name="example">Example %d</string>
    <string name="example_translation">Translation %d</string>
    <string name="add_example">Add example</string>
    <string name="max_examples_number">Max number of examples is %d</string>
    <string name="edit_word">Edit</string>
    <string name="developer">Developer</string>
    <string name="developer_details" translatable="false">Ковалев Денис\ndenkov0110@yandex.ru</string>
    <string name="search_hint">Search…</string>
    <string name="learn_wordlist">Learn the wordlist</string>
    <string name="remove_the_wordlist">Remove the wordlist</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="by_progress">By progress level</string>
    <string name="by_default">Default</string>
    <string name="all">All</string>
    <string name="label_wordlists">Wordlists</string>

</resources>
