<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/navigation_learning">

    <fragment
        android:id="@+id/navigation_learning"
        android:name="com.myvocab.myvocab.ui.learning.LearningFragment"
        android:label="@string/label_learning"
        tools:layout="@layout/fragment_learning"/>

    <fragment
        android:id="@+id/navigation_my_words"
        android:name="com.myvocab.myvocab.ui.my_words.MyWordsFragment"
        android:label="@string/label_my_words"
        tools:layout="@layout/fragment_my_words">

        <action
            android:id="@+id/to_add_new_word"
            app:destination="@id/navigation_add_new_word"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_wordlists"
        android:name="com.myvocab.myvocab.ui.word_sets.WordSetsFragment"
        android:label="@string/label_wordlists"
        tools:layout="@layout/fragment_all_wordsets">

        <action
            android:id="@+id/to_word_set_details"
            app:destination="@id/navigation_word_set_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.myvocab.myvocab.ui.settings.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_word_set_details"
        android:name="com.myvocab.myvocab.ui.word_set_details.WordSetDetailsFragment"
        tools:layout="@layout/fragment_word_set_details">

        <argument
            android:name="word_set"
            app:argType="com.myvocab.myvocab.data.model.WordSet" />

    </fragment>

    <fragment
        android:id="@+id/navigation_add_new_word"
        android:name="com.myvocab.myvocab.ui.add_new_word.AddNewWordFragment"
        android:label="@string/label_add_new_word"
        tools:layout="@layout/fragment_add_new_word">

        <argument
            android:name="wordToEdit"
            app:argType="com.myvocab.myvocab.data.model.Word"
            android:defaultValue="@null"
            app:nullable="true" />

    </fragment>

</navigation>