<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/byDefaultBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/byDefaultIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@null" />

                <TextView
                    android:id="@+id/byDefaultLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/by_default"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/alphabeticallyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/alphabeticallyIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_sort_alphabetically" />

                <TextView
                    android:id="@+id/alphabeticallyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/alphabetically"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/byKnowledgeLevelBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/byKnowledgeLevelIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_brain_empty_18dp" />

                <TextView
                    android:id="@+id/byKnowledgeLevelLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/by_progress"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>